stylesheets/main.css
/* ... */
img {
    border: 0;
    -ms-interpolation-mode: bicubic; /* Improve IE's resizing of images: css-tricks.com/ie-fix-bicubic-scaling-for-images */
}

/* Corrects overflow displayed oddly in IE9 */
svg:not(:root) {
    overflow: hidden;
}

/* Abbreviations
---------------------------------------- */

abbr[title], dfn[title] {
    border-bottom: 1px dotted;
    cursor: help;
}

/* Marked/inserted/deleted text
---------------------------------------- */

mark {
    background: #ff0;
}

ins {
    text-decoration: none;
    background: #ff9;
}

del {
    text-decoration: line-through;
}

/* Others
---------------------------------------- */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-bottom: 1px solid #ddd;
}

strong, b, dt {
    font-weight: bold;
}

dfn {
    font-style: italic;
}

var, address {
    font-style: normal;
}

/* Position 'sub' and 'sup' without affecting line-height: gist.github.com/413930 */
sub, sup {
    font-size: 0.625em;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sup {
    top: -0.5em;
}

sub {
    bottom: -0.25em;
}

/* Helper classes
---------------------------------------- */

/*
    * Micro clearfix hack, more semantically titled with 'group'
    * Source: nicolasgallagher.com/micro-clearfix-hack/
*/
.group:before, .group:after {
    content: "";
    display: table;
}

.group:after {
    clear: both;
}

.group {
    *zoom: 1;
}

img.floatleft { 
    float: left; 
    margin: 4px; 
}

img.floatright { 
    float: right; 
    margin: 4px; 
}
/*=======================================*/
/* Primary styles
---------------------------------------- */

html {
    background: #fcffb0 url(../images/bg-top.png) repeat-x;
}

body {
    font: 14px/21px georgia, serif;    
    max-width: 960px;
    margin: 0 auto;
}

header[role="banner"] {
    background: url(../images/bg-top-moon.png) center bottom no-repeat;
    display: block;
    position: relative;
    width: 100%;
    height: 300px;
    margin-top: 10px;
}

/* Logo */
h1[role="logo"] a {
    display: block;
    position: absolute;
    width: 177px;
    height: 53px;
    text-indent: -9999px;
    overflow: hidden;
    background: url(../images/logo.png) no-repeat;
}    
h1[role="logo"] a:hover {
    margin-top: 4px;
}
/* Navigation */
header[role="banner"] nav {
    max-width: 520px;
    margin: 0px auto;
}
header[role="banner"] nav ul {
    clear: both;
    list-style: none;
}

header[role="banner"] nav li {
    float: left;
    margin-right: 30px;
}
header[role="banner"] nav li a {
    font-family: 'PT Sans', sans-serif;
    font-size: 1.2em; 
    display: block;
    width: 90px;
    height: 3em;
    color: #ddd;
}

header[role="banner"] nav li a sub {
    font-family: 'PT Sans', sans-serif;
    font-size: 0.525em; 
}

header[role="banner"] nav li a:hover {
    border-top: 4px solid #fcffb0;
    opacity : .6;
    transition : .2s

     -moz-transition: opacity 1s linear;  /* FF4+ */
       -o-transition: opacity 1s linear;  /* Opera 10.5+ */
  -webkit-transition: opacity 1s linear;  /* Saf3.2+, Chrome */
      -ms-transition: opacity 1s linear;  /* IE10? */
          transition: opacity 1s linear;  
}

header[role="banner"] a.cur {
    color: #76b5ba;
    text-shadow: 2px 1px 0px #333;
}

/* Show interesting banner animations */

header[role="banner"] #stage {
    position: absolute;
    background: url(../images/coffee-cup.png) center bottom no-repeat;
    display: block;
    width: 179px;
    height: 165px;
    left: 40%;
    top: 135px;
}

/* Main post */

section[role="container"]{
    max-width: 520px;
    position: relative;
    color: #081640; 
    background: #f6f6f6 url(../images/bg-article.jpg) repeat;
    padding: 5px 24px 10px 56px;
    margin: 0 auto;
}

/* Date formatting */

.postdate {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
}
.postdate abbr {
    position: relative;
    z-index: 2;
    color: #223f59;
    font-family: Helvetica, Arial, sans-serif;
    text-transform: uppercase;
    border: 0;
    font-size: 1.1429em; /* 16px */ line-height: 1.3125em; /* 21px */
}
.postdate .dd {
    position: relative;
    z-index: 1;
    color: #ddd;  
    display: inline-block;
    text-align: center;
    margin: 0 auto;
    width: 1.6em;
}
.postdate .dd:before {
    display: block;
    z-index: -1;
    position: absolute;
    content: "";
    width: 1.6em;
    height: 1.6em;
    left: 0em;
    top: -0.2em;
    background-color: #223f59;

    border-radius: 0.8em;
    -moz-border-radius: 0.8em;
    -webkit-border-radius: 0.8em;
}
/* Custom Fonts */

article[role="post"] h1, article[role="post"] h2, article[role="post"] h3, article[role="post"] h4, 
aside[role="sidebar"] h1, aside[role="sidebar"] h2, aside[role="sidebar"] h3
{
    font-family: 'Arvo', serif;
}

/* Typo graphy with vertical rhythm from http://drewish.com/tools/vertical-rhythm */
/* Setting: Base: 14, Line height: 21 */

article[role="post"] p, article[role="post"] li {
    font-size: 1em; /* 14px */ 
    line-height: 1.5em; /* 21px */ 
    margin: 0 0 1.5em 0; 
    margin-bottom: 1em;
}
/* Drop cap */
article[role="post"] h1 + p:first-letter {
    float: left;
	font-size: 3em;
	line-height: .9em;
	margin-right: 3px;
	padding: 2px;
}

article[role="post"] h1 a {
    color: #081640;
}

article[role="post"] h1 a:hover {
    color: #C60;
}

article[role="post"] h1 {
    letter-spacing: -1px;
    font-size: 2.2857em; /* 32px */ line-height: 1.3125em; /* 42px */ margin-top: 0.3563em; margin-bottom: 0.3em; 
}

article[role="post"] h2 {
    font-size: 1.5714em; /* 22px */ line-height: 1.9091em; /* 42px */ margin-top: 0.5545em; margin-bottom: 0.4em; }

article[role="post"] h3 {
    font-size: 1.4286em; /* 20px */ line-height: 1.05em; /* 21px */ margin-top: 0.55em; margin-bottom: 0.5em; 
}

article[role="post"] h4 {
    font-size: 1.2857em; /* 18px */ line-height: 1.1667em; /* 21px */ margin-top: 1.1667em; margin-bottom: 0em; 
}
/* ... */

